<resources>
    <string name="app_name">balancr</string>
    <string name="title_weightings">Pesagens</string>
    <string name="title_body_pictures">Historico Corporal</string>
    <string name="login">Login</string>
    <string name="sign_up_label">Registro</string>
    <string name="title_add_weighting">Registrar peso</string>
    <string name="title_add_body_picture">Adicionar Foto</string>
    <string name="title_profile">Perfil</string>
    <string name="invalid_input">Dados inseridos estão inválidos</string>
    <string name="incorrect_password">Senha incorreta</string>
    <string name="passwords_dont_match">Senhas não conferem</string>
    <string name="password_updated">Senha alterada com sucesso</string>
    <string name="height_hint">Altura (em centímetros, ex: 183)</string>
    <string name="name_hint">Nome</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Senha</string>
    <string name="confirm_password_hint">Confirmar senha</string>
    <string name="sign_up">Cadastrar</string>
    <string name="save_details">Salvar detalhes</string>
    <string name="current_password_hint">Senha atual</string>
    <string name="new_password_hint">Nova Senha</string>
    <string name="update_password">Alterar Senha</string>
    <string name="logout">Sair</string>
    <string name="details_updated">Detalhes alterados com sucesso</string>
    <string name="invalid_email">E-mail inválido</string>
    <string name="invalid_auth">Autenticação inválida</string>
    <string name="or">ou</string>
    <string name="select_from_gallery">Selecionar da Galeria</string>
    <string name="date_dd_mm_yyyy_hint">Data: dd/mm/yyyy</string>
    <string name="save_picture">Salvar Foto</string>
    <string name="weight_hint">Peso</string>
    <string name="register">Registrar</string>
    <string name="email_already_taken">Já existe um usuário cadastrado com esse e-mail</string>
    <string name="placeholder_text">Nenhum registro cadastrado até o momento</string>
</resources>
